# excavation_project

./: .gitignore  ARCHITECTURE.md  PACKAGE_STRUCTURE.md  QUICKSTART.md  REFACTORING_SUMMARY.md
excavation_base_motion/: CMakeLists.txt  package.xml  setup.cfg  setup.py
excavation_base_motion/excavation_base_motion/: __init__.py  base_motion_node.py
excavation_base_motion/launch/: base_motion.launch.py
excavation_base_motion/resource/: excavation_base_motion
excavation_core/: CMakeLists.txt  package.xml
excavation_core/excavation_core/: __init__.py  base_planner.py  excavation_model.py  excavation_planner.py  ik_solver.py  mission_controller.py  parameters.py  position_planner.py  robot_model.py  scoop_trajectory.py
excavation_core/test/: conftest.py  test_base_planner.py  test_excavation_grid.py  test_excavation_model.py  test_excavation_planner.py  test_ik_solver.py  test_mission_controller.py  test_position_planner.py  test_robot_model.py  test_scoop_trajectory.py
excavation_debug/: CMakeLists.txt  package.xml  setup.cfg  setup.py
excavation_debug/excavation_debug/: __init__.py  debug_visualizer_node.py  raw_urdf_publisher.py
excavation_debug/launch/: debug.launch.py
excavation_debug/resource/: excavation_debug
excavation_mission/: CMakeLists.txt  package.xml  setup.cfg  setup.py
excavation_mission/excavation_mission/: __init__.py  mission_controller_node.py  mission_viz.py  scoop_executor_node.py
excavation_mission/launch/: mission.launch.py
excavation_mission/resource/: excavation_mission
excavation_msgs/: CMakeLists.txt  package.xml
excavation_msgs/msg/: ExcavationGrid.msg  ExcavationPlan.msg  MissionStatus.msg  ScoopAction.msg
excavation_world/: package.xml  setup.cfg  setup.py
excavation_world/excavation_world/: __init__.py  base_motion_node.py  base_planner.py  debug_visualizer_node.py  excavation_grid.py  excavation_model.py  excavation_planner.py  ik_solver.py  mission_controller.py  mission_controller_node.py  parameters.py  robot_model.py  scoop_executor_node.py  scoop_trajectory.py  world_markers.py  world_node.py
excavation_world/launch/: mission.launch.py  world.launch.py
excavation_world/test/: test_base_planner.py  test_debug_visualizer.py  test_excavation_grid.py  test_excavation_model.py  test_excavation_planner.py  test_ik_solver.py  test_mission_controller.py  test_robot_model.py  test_scoop_trajectory.py
excavator_control/: CMakeLists.txt  package.xml
excavator_control/config/: excavator_controllers.yaml
excavator_control/launch/: excavator_control.launch.py
excavator_description/: CMakeLists.txt  package.xml
excavator_description/launch/: display.launch.py  headless.launch.py
excavator_description/urdf/: excavator.urdf.xacro
excavator_moveit_config/: CMakeLists.txt  package.xml
excavator_moveit_config/config/: excavator.srdf  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml
excavator_moveit_config/launch/: moveit_excavator.launch.py
