<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>excavation_base_motion</name>
  <version>0.0.0</version>
  <description>ROS 2 node for robot base motion and movement control</description>
  <maintainer email="kpetrov@quickbase.com">root</maintainer>
  <license>TODO: License declaration</license>

  <!-- ROS dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>

  <!-- Core library dependency -->
  <depend>excavation_core</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
