<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>excavation_core</name>
  <version>0.0.0</version>
  <description>Pure Python simulation and computation library (no ROS dependencies)</description>
  <maintainer email="kpetrov@quickbase.com">root</maintainer>
  <license>TODO: License declaration</license>

  <!-- No ROS dependencies - pure Python only -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
