<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>excavation_debug</name>
  <version>0.0.0</version>
  <description>ROS 2 nodes for debugging and visualization utilities</description>
  <maintainer email="kpetrov@quickbase.com">root</maintainer>
  <license>TODO: License declaration</license>

  <!-- ROS dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>excavation_msgs</depend>

  <!-- Core library dependency -->
  <depend>excavation_core</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
